# UnityNativeAndroidCMake

./: .gitignore  README.md
NativePlugin/: .gitignore  CMakeLists.txt  Makefile  build_android.sh
NativePlugin/lib/: CMakeLists.txt  lib.c  lib.cpp  lib.h
NativePlugin/meta/: CMakeLists.txt
NativePlugin/src/: CMakeLists.txt  plugin.cpp
UnityProject/: .gitignore
UnityProject/Assets/Materials/: OrangeCube.mat
UnityProject/Assets/Resources/: PerformanceTestRunInfo.json
UnityProject/Assets/Scenes/: SampleScene.unity
UnityProject/Assets/Scripts/: Spin.cs
UnityProject/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
UnityProject/ProjectSettings/: ProjectSettings.asset
